--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,12 @@ dependencies {
 
     // Compose dependencies
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:1.0.0-alpha07"
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha08"
+    implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation "com.google.accompanist:accompanist-flowlayout:0.17.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.28.0"
+
+    //Icons
+    implementation "androidx.compose.material:material-icons-extended"
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
@@ -105,7 +109,7 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.1.0"
 
     // Room
-    def room_version = "2.5.0"
+    def room_version = "2.5.1"
     implementation "androidx.room:room-ktx:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
